--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -69,6 +69,9 @@
             ],
             "#lib/*": [
                 "src/lib/*"
+            ],
+            "#context/*": [
+                "src/context/*"
             ]
         }
     },
